// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Review renders review component with full review 1`] = `
<div>
  <div
    class="css-ahmskn-SkeletonTheme"
  >
    <div
      style="position: fixed; z-index: 9999; top: 50px; left: 16px; right: 16px; bottom: 16px; pointer-events: none; max-width: 1200px; margin: 0px auto;"
    />
    <div
      class="sc-jeqYYF fQdZzU"
    >
      <div
        class="sc-hKwCoD fquBwD"
      >
        <div
          class="sc-bqiQRQ bpCSyw"
          height="40"
          width="40"
        >
          <div
            class="sc-ksdxAp dstzbx"
            height="40"
            width="40"
          />
        </div>
        <div
          class="sc-eCImvq gpGiiu"
          color="textSecondary"
          font-size="2"
          font-weight="bold"
        >
          TheDarkKnight31
        </div>
        <div
          class="sc-eCImvq jvcZyr"
          color="textTertiary"
          font-size="2"
        >
          12 Apr 2021 11:09 AM
        </div>
      </div>
      <div
        class="sc-eCImvq iEZrXs"
        color="textSecondary"
        font-size="2"
      >
        I will be short. You should understand how hard to make movies based on such a legendary universe (expectation is too high!), with a lot of characters that need screen time, and with limited budget, PLUS in a pandemic situation, - the director made a great job.

This is the best adaptation of such a legendary title.
      </div>
      <div>
        <div
          class="sc-kfPtPH jkzmwL"
        >
          <div
            class="sc-eCImvq icgMjj"
            color="secondary"
            font-size="1"
          >
            <a
              class="sc-jRQAMF Vchss"
              href=""
            >
              View full review
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Review renders review component without full review 1`] = `
<div>
  <div
    class="css-ahmskn-SkeletonTheme"
  >
    <div
      style="position: fixed; z-index: 9999; top: 50px; left: 16px; right: 16px; bottom: 16px; pointer-events: none; max-width: 1200px; margin: 0px auto;"
    />
    <div
      class="sc-jeqYYF fQdZzU"
    >
      <div
        class="sc-hKwCoD fquBwD"
      >
        <div
          class="sc-bqiQRQ bpCSyw"
          height="40"
          width="40"
        >
          <div
            class="sc-ksdxAp dstzbx"
            height="40"
            width="40"
          />
        </div>
        <div
          class="sc-eCImvq gpGiiu"
          color="textSecondary"
          font-size="2"
          font-weight="bold"
        >
          TheDarkKnight31
        </div>
        <div
          class="sc-eCImvq jvcZyr"
          color="textTertiary"
          font-size="2"
        >
          12 Apr 2021 11:09 AM
        </div>
      </div>
      <div
        class="sc-eCImvq iEZrXs"
        color="textSecondary"
        font-size="2"
      >
        I will be short. You should understand how hard to make movies based on such a legendary universe (expectation is too high!), with a lot of characters that need screen time, and with limited budget, PLUS in a pandemic situation, - the director made a great job.

This is the best adaptation of such a legendary title.
      </div>
    </div>
  </div>
</div>
`;
